fix: update width of upload item for not wrap

--- a/src/component/Upload/css/Upload.css
+++ b/src/component/Upload/css/Upload.css
@@ -1,7 +1,7 @@
 .upload .upload-item {
   border: 1px dashed #d9d9d9;
-  width: 27vw;
-  height: 27vw;
+  width: 26vw;
+  height: 26vw;
   border-radius: 4px;
   background-color: #fafafa;
   text-align: center;
